<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".build_pc">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="417dp"
        android:layout_height="102dp"
        android:background="@android:color/holo_green_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="119dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/button4"
        android:layout_width="36dp"
        android:layout_height="31dp"
        android:background="@drawable/cart"
        android:text="@string/cartbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />
    <Button
        android:id="@+id/button5"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/user"
        android:text="@string/cartbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="401dp"
        android:layout_height="483dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratbold"
                android:text="@string/casing"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/motherboard"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/processor"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/ram"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/ssd"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/hard"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/power"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="426dp"
                android:layout_height="90dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vga"
                android:textColor="#FF0000"
                android:textSize="25dp" />


        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="413dp"
        android:layout_height="43dp"
        android:background="@android:color/holo_green_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sweetfig"
        android:text="@string/buildpc"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <SearchView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>