<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".insert_pc_parts">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="417dp"
        android:layout_height="102dp"
        android:background="@android:color/holo_green_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="119dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/button5"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/user"
        android:text="@string/cartbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="415dp"
        android:layout_height="68dp"
        android:fontFamily="@font/sweetfig"
        android:text="@string/insertpcparts"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="@string/insertpcparts" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="382dp"
        android:layout_height="447dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.73">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="212dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratbold"
                android:text="@string/insertpcpartsform1"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp" />

            <Spinner
                android:id="@+id/spin"
                android:layout_width="318dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/parts"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="212dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratbold"
                android:text="@string/insertpcpartsform2"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/brand"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="212dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratbold"
                android:text="@string/insertpcpartsform3"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/model"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@android:drawable/editbox_background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="212dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratbold"
                android:text="@string/insertpcpartsform4"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/price"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@android:drawable/editbox_background"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="145dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratbold"
                android:text="@string/insertpcpartsform5"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/addimage"
                android:layout_width="158dp"
                android:layout_height="119dp"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                app:srcCompat="@android:drawable/ic_input_add"
                android:onClick="chooseImage"/>

            <Button
                android:id="@+id/choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:fontFamily="@font/montserratbold"
            android:onClick="'insert"
            android:text="@string/insertpcpartsformsubmit"
            android:textColor="@android:color/background_dark"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="OnClick" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>